# FastCgiWrapper

./: .gitignore  CMakeLists.txt  FcgiRequest.cpp  FcgiRequest.h  FcgiResponse.cpp  FcgiResponse.h  FcgiServer.cpp  FcgiServer.h  LICENSE  README.md
example/: CMakeLists.txt  fcgi_sample  main.cpp
